[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BUPTmw"
version = "0.1.1"
authors = [
    {name = "ZeroCore", email = "esetting@hotmail.com"}
]
description = "Help BUPT students access school system with python."
keywords = ["BUPT"]
readme = "README.MD"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]

requires-python = ">= 3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml"
]

[project.urls]
Homepage = "https://github.com/ZeroCore-Zero/BUPT_Middleware"
